# moobot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  moobloom_events.yml  pyproject.toml
docker/: service.dockerfile
docker/scripts/: bot-docker-entrypoint.sh  test-docker-entrypoint.sh
docs/: discord_how_to.txt
hyacinth/discord/: discord_bot.py
migrations/: 01_add_filter_type.py  01_add_reactions_created.py  01_optional_channel.py  02_add_event_channel_introductions.py  02_remove_price_from_cl_search_spec.py  03_remove_distance_from_cl_search_spec.py  04_switch_to_plugins.py
moobot/: __init__.py  _entry.py  constants.py  events.py  load_events.py  main.py  scheduler.py  settings.py
moobot/db/: models.py  session.py
moobot/db/crud/: events.py  google.py
moobot/discord/: discord_bot.py  emoji.py  event_option.py  thread_interaction.py
moobot/discord/commands/: create_event.py  delete_event.py  update_event.py  whos_going.py
moobot/discord/views/: event_modal.py
moobot/fastapi/: app.py
moobot/fastapi/routers/: google_oauth.py  health.py
moobot/util/: date_parser.py  discord.py  format.py  formatting.py  google.py
scripts/: create_event.py  create_tables.py  format.sh  lint.sh  run.sh  set_google_calendar_id.py  test.sh
static/: styles.css
templates/: google_oauth.html
tests/: conftest.py  test_placeholder.py
tests/db/: test_models.py
tests/discord/commands/: test_create_event.py
tests/discord/views/: test_event_modal.py
