[tool.poetry]
name = "moobot"
version = "0.0.1"
description = "Private server management bot."
authors = ["Stephan Lensky <public@slensky.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
homepage = "https://github.com/stephanlensky/moobot"
repository = "https://github.com/stephanlensky/moobot"
include = [
    "LICENSE",
]
packages = [
    {include = "moobot"}
]

[tool.poetry.scripts]
moobot = "moobot._entry:run_discord_bot"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "277d35c" }
python-dateutil = "^2.8.2"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
psycopg2 = "^2.9.3"
APScheduler = "^3.9.1"
SQLAlchemy = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"
docformatter = "^1.5.1"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-comprehensions = "^3.10.1"
Flake8-pyproject = "^1.2.2"
pytest-cov = "^4.0.0"
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
ignore = ["B008", "E203", "E501", "E711", "E712", "W503"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.black]
line-length = 100

[tool.mypy]
show_column_numbers = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "discord.*",
]
ignore_missing_imports = true
