[project]
name = "moobot"
version = "0.1.0"
description = "Private server management bot."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.6",
    "google-api-python-client>=2.156.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "jinja2>=3.1.5",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.36",
    "discord-py>=2.4.0",
]

[dependency-groups]
dev = [
    "google-api-python-client-stubs>=1.28.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.4",
    "types-python-dateutil>=2.9.0.20241206",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.mypy]
show_column_numbers = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "apscheduler.*",
    "google_auth_oauthlib.*",
    "google.*",
    "googleapiclient.*",
]
ignore_missing_imports = true
